--- a/css/styles.css
+++ b/css/styles.css
@@ -64,8 +64,7 @@ a, a:hover{
 }
 
 .dsmovie-card{
-position: absolute;
-width: 260px;
+width: 100%;
 /*height: 349px;*/
 left: 33px;
 top: 130px;
@@ -81,10 +80,12 @@ border-radius: 8px;
 }
 
 .dsmovie-card-description{
-    padding: 10px 0 20px 0;
+    padding: 10px 20px 20px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
+    min-height: 150px;
 }
 
 .dsmovie-card-description h3{
@@ -102,7 +103,7 @@ border-radius: 8px;
 }
 
 .dsmovie-btn, .dsmovie-btn:hover{
-    width: 180px;
+    width: 60%;
     height: 40px;
     left: 40px;
     top: 289px;
