--- a/css/styles.css
+++ b/css/styles.css
@@ -71,11 +71,21 @@ a, a:hover{
 
     background: var(--color-white);
     border-radius: 8px;
+}
+
+.transition-dsmovie-card{
+    width: 100%;
+    /*height: 349px;*/
+    left: 33px;
+    top: 130px;
+
+    background: var(--color-white);
+    border-radius: 8px;
 
     transition: transform 0.5s;
 }
 
-.dsmovie-card:hover{
+.transition-dsmovie-card:hover{
     transform: scale(1.3);
 }
 
@@ -129,4 +139,13 @@ a, a:hover{
     justify-content: center;
 
     color: var(--color-white);
+}
+
+.dsmovie-form-container{
+    padding: 40px 0;
+    width: 480px;
+    height: 620px;
+    left: 256px;
+    top: 100px;
+    border-radius: 8px;
 }
