--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
     --color-gray: #ddd;
     --text-gray: #4a4a4a;
     --color-white: #ffff;
+    --text-ligth-gray: #aaa;
 }
 
 *{
@@ -126,6 +127,7 @@ a, a:hover{
 
     background: var(--color-primary);
     border-radius: 4px;
+    border: 0;
 
     font-family: 'Open Sans';
     font-style: normal;
@@ -140,12 +142,49 @@ a, a:hover{
 
     color: var(--color-white);
 }
+/*Formularios*/
 
 .dsmovie-form-container{
-    padding: 40px 0;
+    padding: 20px 0;
     width: 480px;
     height: 620px;
     left: 256px;
     top: 100px;
     border-radius: 8px;
+}
+
+.dsmovie-form{
+    width: 100%;
+}
+
+.dsmovie-form-description{
+    background-color: var(--color-white);
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 0 0 8px 8px;
+}
+
+.dsmovie-form-description h3{
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.dsmovie-form-group{
+    margin-bottom: 20px;
+}
+.dsmovie-form-group label{
+    font-size: 12ps;
+    color: var(--text-ligth-gray);
+}
+
+.dsmovie-form-btn-container{
+    margin-top: 30px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
