--- a/css/styles.css
+++ b/css/styles.css
@@ -146,7 +146,7 @@ a, a:hover{
 
 .dsmovie-form-container{
     padding: 20px 0;
-    width: 480px;
+    max-width: 480px;
     height: 620px;
     left: 256px;
     top: 100px;
