--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ a, a:hover{
 }
 
 #dsmovie-card-list{
-    padding: 40px 0;
+    padding: 40px 10px;
 }
 
 .dsmovie-card{
@@ -104,7 +104,7 @@ a, a:hover{
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    min-height: 150px;
+    min-height: 200px;
 }
 
 .dsmovie-card-description h3{
@@ -117,7 +117,7 @@ a, a:hover{
 
     color: #4A4A4A;
     
-    margin-bottom: 25px; 
+    margin-bottom: 10px; 
 }
 
 .dsmovie-card-description-bottom{
