--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ a, a:hover{
 }
 
 #dsmovie-card-list{
-    padding: 40px 10px;
+    padding: 0px 10px;
 }
 
 .dsmovie-card{
@@ -212,3 +212,51 @@ a, a:hover{
     align-items: center;
     justify-content: space-between;
 }
+
+.dsmovie-pagination-container{
+    padding: 15px 0;
+    display: flex;
+    justify-content: center;
+}
+
+.dsmovie-pagination-box{
+    display: flex;
+    width: 180px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.dsmovie-pagination-box p{
+    margin: 0;
+    font-size: 12px;
+    color: var(--color-primary);
+    font-weight: 400;
+}
+.dsmovie-pagination-box button{
+    width: 40px;
+    height: 40px;
+    border: 1px solid var(--color-primary);
+    background-color: var(--color-white);
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.dsmovie-pagination-box button:disabled{
+     border: 1px solid var(--text-ligth-gray);
+}
+
+.dsmovie-pagination-box button img{
+    filter: brightness(0) saturate(100%) invert(30%) sepia(32%) saturate(2987%) hue-rotate(224deg) brightness(87%) contrast(98%);
+}
+
+.dsmovie-pagination-box button:disabled img{
+    filter: unset;
+}
+
+.dsmovie-flip-horizontal{
+    transform: rotate(180deg);
+}
+
