--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,7 @@ a, a:hover{
     transform: scale(1.3);
 }
 
-.dsmovie-card img{
+.dsmovie-card img, iframe{
     width: 100%;
     border-radius: 8px 8px 0 0;
     
